--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
         // var plus = (a, b) => a + b;
 
         console.log(plus(2, 3)); // 5
+
+        // 2  
+        
+        function multiply(a, b) {
+            var result = 0;
+            for (var i = 1; i <= b; i++) {
+                result = plus(result, a);
+            };
+            return result;
+        }
+
+        // var multiply = (a, b) => a * b;
+
+        console.log(multiply(3, 10)) // 30
     
     </script>
 </body>
